--- a/trydjango18/src/templates/home.html
+++ b/trydjango18/src/templates/home.html
@@ -1,1 +1,5 @@
 <h1>{{title}}</h1> {{request.user}}
+
+<form method="post" action="">{% csrf_token %} {{form}}
+    <input type="submit" value="Sign Up" />
+</form>
