--- a/trydjango18/src/templates/home.html
+++ b/trydjango18/src/templates/home.html
@@ -1,5 +1,5 @@
 <h1>{{title}}</h1> {{request.user}}
 
-<form method="post" action="">{% csrf_token %} {{form}}
+<form method="post" action="">{% csrf_token %} {{form.as_p}}
     <input type="submit" value="Sign Up" />
 </form>
