Bootstrap Grid System

--- a/trydjango18/src/templates/base.html
+++ b/trydjango18/src/templates/base.html
@@ -21,7 +21,7 @@
 
     {#verbatim#} {%include 'navbar.html'%} {#endverbatim#}
 
-    <div class="container">
+    <div class="container-fluid">
         {%block junmotron%}
         <div class="jumbotron">
             {%block junmotron_content%} {%endblock%}
